--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera 
-                <span id="tagline">Tu blog de confianza</span>
+                Hyperblog 
+                <span id="tagline">Tu blog de Cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesate del post</h1>
