--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                 <p>Suscribete y dale like</p>
                 
             </div>
+            <div id='footer'>
+                Hecho con amor en platzi 😃
+            </div>
         </div>
     </body>
 </html>
